Fixed some layout issues

--- a/client/views/layouts/layout.less
+++ b/client/views/layouts/layout.less
@@ -1,3 +1,12 @@
+html, body {
+  height: 100%;
+}
+
 body {
   padding-top: 70px;
+}
+
+.CodeMirror {
+  border: 2px solid #eee;
+  height: 600px;
 }
